<resources>
    <string name="app_name">Emotions</string>
    <string name="love">Love</string>
    <string name="joy">Joy</string>
    <string name="surprise">Surprise</string>
    <string name="anger">Anger</string>
    <string name="sadness">Sadness</string>
    <string name="fear">Fear</string>
    <string name="comment">Comment</string>
    <string name="textview">TextView</string>
</resources>
