<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <Button
                    android:id="@+id/Love"
                    android:layout_width="99dp"
                    android:layout_height="61dp"
                    android:background="@android:color/holo_red_dark"
                    android:text="@string/love" />

                <Button
                    android:id="@+id/Joy"
                    android:layout_width="99dp"
                    android:layout_height="66dp"
                    android:background="@android:color/holo_purple"
                    android:text="@string/joy" />

                <Button
                    android:id="@+id/Surprise"
                    android:layout_width="99dp"
                    android:layout_height="61dp"
                    android:background="@android:color/holo_blue_light"
                    android:text="@string/surprise" />

                <Button
                    android:id="@+id/Anger"
                    android:layout_width="99dp"
                    android:layout_height="66dp"
                    android:background="@android:color/holo_green_light"
                    android:text="@string/anger" />

                <Button
                    android:id="@+id/Sadness"
                    android:layout_width="99dp"
                    android:layout_height="61dp"
                    android:background="@android:color/holo_blue_dark"
                    android:text="@string/sadness" />

                <Button
                    android:id="@+id/Fear"
                    android:layout_width="99dp"
                    android:layout_height="61dp"
                    android:background="@android:color/holo_orange_light"
                    android:text="@string/fear" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Lovecount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginEnd="164dp"
                    android:layout_marginBottom="45dp"
                    android:text="0" />


                <TextView
                    android:id="@+id/Joycount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="196dp"
                    android:layout_marginBottom="45dp"
                    android:text="0" />
                <TextView
                    android:id="@+id/Suprisecount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="204dp"
                    android:layout_marginBottom="45dp"
                    android:text="0" />
                <TextView
                    android:id="@+id/Angercount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="154dp"
                    android:layout_marginBottom="45dp"
                    android:text="0" />


                <TextView
                    android:id="@+id/Sadnesscount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/textView"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="188dp"
                    android:layout_marginBottom="45dp"
                    android:text="0" />
                <TextView
                    android:id="@+id/Fearcount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="164dp"
                    android:layout_marginBottom="45dp"
                    android:text="0" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/comment"
            android:layout_width="325dp"
            android:layout_height="54dp"
            android:inputType="text"
            android:text="@string/comment"
            tools:text="Comment:" />
    </LinearLayout>
</RelativeLayout>